Bug 153519 -- parent ContentLists to their root elements.  r=peterv, sr=jst